--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+*.toml
 # Distribution / packaging
 .Python
 build/
@@ -19,6 +19,7 @@ lib64/
 parts/
 sdist/
 var/
+data/
 wheels/
 share/python-wheels/
 *.egg-info/
