Pushing Dataprocessing notebook and evaluations

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ langchain-openai == 0.0.6
 matplotlib == 3.8.3
 scikit-learn == 1.4.1.post1
 angchain langchain_openai langchainhub
+pip install ragas langchain_openai python-dotenv
+pip install nltk
