--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ langchain == 0.1.7
 langchain-openai == 0.0.6
 matplotlib == 3.8.3
 scikit-learn == 1.4.1.post1
-ragas 
-langchain_openai
-python-dotenv
-nltk
+ragas == 0.1.3
+langchain-openai ==  0.0.8
+python-dotenv == 1.0.1
