--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-langchain == 0.1.7
-langchain-openai == 0.0.6
-matplotlib == 3.8.3
-scikit-learn == 1.4.1.post1
-ragas == 0.1.3
-langchain-openai ==  0.0.8
-python-dotenv == 1.0.1
+langchain>=0.1.7
+spacy==3.7.4
+cohere==4.53
+matplotlib==3.8.3
+scikit-learn==1.4.1.post1
+ragas==0.1.3
+langchain-openai==0.0.8
+python-dotenv==1.0.1
+beautifulsoup4==4.12.3
+PyPDF2==3.0.1
+python-docx == 1.1.0
